# calus

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
calus/: ACCURACY_FINDINGS.md  CONTRIBUTING.md  DEBUG_REPORT.md  QUICKSTART.md  README.md  RUN_GUIDE.md  SECURITY.md  __init__.py  __main__.py  api.py  cli.py  owasp.py  pyproject.toml  signals.py
calus/.github/workflows/: ci.yml  release.yml  security.yml
calus/benchmark/: README.md  harness.py
calus/benchmark/datasets/: attacks.txt  benign.txt
calus/context/: __init__.py  threat_context.py
calus/decision/: __init__.py  decision_maker.py  policy.py
calus/detection/: __init__.py  _ac_compat.py  aho_corasick.py  attack_index_v2.json  attack_signatures.json  benign_calibration.txt  calibration_keep.txt  cascade_engine.py  combined_detector.py  embedding_layer.py  redact.py  scanner.py  scored_engine.py  signatures.py  similarity_layer.py
calus/detection/behavioral/: __init__.py  cross_session.py  debug_access.py  excessive_agency.py  goal_misalign.py  memory_poison.py  reasoning_dos.py
calus/detection/core/: __init__.py  aho.py  canary.py  encoding.py  entropy.py  heuristic.py  normalizer.py
calus/detection/extended/: __init__.py  config_drift.py  homoglyph.py  path_traversal.py  threat_categories.py  tool_alias.py
calus/detection/transforms/: __init__.py  ascii_smuggle.py  atbash.py  binary.py  braille.py  charspace.py  charswap.py  flip.py  morse.py  zalgo.py
calus/docs/: ARCHITECTURE.md  CONTAMINATION_CLEANUP.md  LAYER2_RULES.md  LAYERED_ARCHITECTURE.md  LAYER_BENCHMARK_REPORT.md  MISSED_ATTACKS.md  THREAT_COVERAGE.md  _gen_layer2_rules.py
calus/integrations/: exporter.py  monitor.py
calus/integrations/mcp/: __init__.py  guardrail_types.py  guardrails.py  mcp_config.py  mcp_wrapper.py  quarantine.py  wrapper_config.py
calus/layers/: __init__.py  layer1_patterns.py  layer2_flowgraph.py  layer3_model.py
calus/learning/: __init__.py  engine.py  evolver.py  feedback.py  miner.py  mutator.py  normalizer.py  scheduler.py  store.py
calus/patterns/: __init__.py  base.py  loader.py
calus/patterns/access_control/: access_control.py
calus/patterns/acp_vulnerabilities/: acp_vulnerabilities.py  acp_vulnerabilities_patterns.py
calus/patterns/agent_identity_impersonation/: agent_identity_impersonation_patterns.py
calus/patterns/agent_manipulation/: agent_manipulation.py  agent_manipulation_evasion.py  agent_manipulation_patterns.py  agent_manipulation_payloads.py
calus/patterns/agent_security/: agent_security.py  agent_security_patterns.py
calus/patterns/agentic_attacks/: agentic_attacks.py  agentic_attacks_patterns.py
calus/patterns/agentic_exploitation/: adversarial_perturbation.py  adversarial_prompt.py  adversarial_social_engineering.py  agent_manipulation.py  agent_worm.py  agentic_exploitation_patterns.py  alignment_failure.py  atfaa_threat.py  automated_exploitation.py  autonomous_exploit.py  autonomous_exploitation.py  autonomous_system_attack.py  backdoor_attack.py  blockchain_attack.py  browser_exfiltration.py  confused_deputy.py  context_leakage.py  credential_harvesting.py  data_exfiltration.py  ddos_forensics.py  (+35 more)
calus/taxonomy/: __init__.py  taxonomy.py
calus/tests/: conftest.py  test_decision_matrix.py  test_flow_decision.py  test_smoke.py
calus/tools/: calibrate.py  refine_calibration.py
(+356 files in other folders)
